@@ -4449,3 +4449,5 @@
          objects on win32 UI (thanks, Dr. Memory) (Sergio).
 20130322 roms/{plus3e-0.rom,plus3e-1.rom,plus3e-2.rom}: update to v1.38 of the
          +3e ROMs (fixes bug #290) (thanks, Guesser) (Fred).
+20130324 peripherals/nic/{w5100.c,w5100_internals.h,w5100_socket.c}: destroy 
+         mutex before closing (patch #308) (Sergio).
